BUGFIX:SSF-106 fixed overlapping edit and delete button on datagrid in ie7.

--- a/admin/scss/ie7.scss
+++ b/admin/scss/ie7.scss
@@ -109,6 +109,7 @@ html {
 .cms .ss-gridfield table.ss-gridfield-table tbody {
 	td {
 		button {
+			width:40px;
 			&.gridfield-button-delete {
 				display:block;
 				float:left;
